--- a/src/index.css
+++ b/src/index.css
@@ -225,9 +225,13 @@ img {
 .projects--title {
   font-size: clamp(2em, 2.5vw, 3em);
   color: #363333;
+  text-align: center;
 }
 
+.project--name {
+  color: #363333;
 
+}
 
 .projects--dimensions {
   height: 12em;
@@ -249,18 +253,19 @@ img {
   justify-content: space-evenly;
   align-items: center;
   background-color: rgb(26, 24, 24);
-  
   padding: 2em 0 2em 0;
+  
 }
 
 .skills--header {
   margin-bottom: 1em;
-  align-self: center;
+  text-align: center;
 }
 
 .skills--block {
   background-color: rgb(26, 24, 24);
-    margin: 2em 0 2em 0;
+  margin: 2em 0 2em 0;
+  
 }
 
 .aligned {
@@ -308,6 +313,7 @@ img {
   justify-content: center;
   align-items: center;
   background-color: antiquewhite;
+  
 }
 
 .contact--form {
@@ -317,6 +323,7 @@ img {
   gap: 1em;
   background-color: rgb(26, 24, 24);
   width: 92.5vw;
+  
   
 }
 
